Correctly set X display on plugins.  Bug 116924, patch by Sergi <sep@sparc.spb.su>, r=serge, sr=beard, a=roc+moz